kubernetes/cks/network-policies/killercoda/space1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np
  namespace: space1
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              ns: space2
    - to:
      ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
